Add train and predict of a project (TO TEST)
