# ANITA/python/api/endpoints/software_quality/projects.py
@@ -9,7 +9,6 @@ from flask import request, Response, json
 # Local application imports
 from ...validator import *
 import modules.software_quality.projects.projects as projects
-from modules.software_quality.projects.known_datasets.KnownDataset import KnownDataset
 from database.anita.controller.SonarqubeController import SonarqubeController
 from sonarqube.local.SonarqubeLocalProject import SonarqubeLocalProject
 import utils.FileUtils as utils
@@ -44,15 +43,16 @@ def load_new_project(project_name):
     project_zip = request.files["project_zip"]
 
     # Parameters - Optional
-    known_dataset = None
-    if "known_dataset" in request.form:
-        known_dataset = request.form["known_dataset"]
+    additional_info = request.form["additional_info"]
+    if additional_info.upper() == "FALSE":
+        additional_info = False
+    else:
+        additional_info = True
 
     # noinspection PyBroadException
     try:
-        timestamp = int(datetime.now().timestamp())
-        status, content = projects.load_data(project_name, str(timestamp), project_zip,
-                                             known_project_name=known_dataset, new_project=True)
+        status, content = projects.load_data(project_name, project_zip, additional_info=additional_info,
+                                             new_project=True)
     except Exception as e:
         error_content = {"error": "Internal server error", "msg": str(e), "traceback": traceback.format_exc()}
         return Response(json.dumps(error_content), status=500, mimetype="application/json")
@@ -60,9 +60,7 @@ def load_new_project(project_name):
     if status >= 400:
         return Response(json.dumps(content), status=status, mimetype="application/json")
 
-    date = datetime.fromtimestamp(timestamp).strftime('%Y-%m-%d %H:%M:%S')
-    info_project = {"project_name": project_name, "timestamp": timestamp, "dump": date}
-    return Response(json.dumps(info_project), status=202, mimetype="application/json")
+    return Response(json.dumps(content), status=202, mimetype="application/json")
 
 
 def update_project(project_name):
@@ -76,8 +74,7 @@ def update_project(project_name):
 
     # noinspection PyBroadException
     try:
-        timestamp = int(datetime.now().timestamp())
-        status, content = projects.load_data(project_name, timestamp, project_zip)
+        status, content = projects.load_data(project_name, project_zip)
     except Exception as e:
         error_content = {"error": "Internal server error", "msg": str(e), "traceback": traceback.format_exc()}
         return Response(json.dumps(error_content), status=500, mimetype="application/json")
@@ -85,9 +82,7 @@ def update_project(project_name):
     if status >= 400:
         return Response(json.dumps(content), status=status, mimetype="application/json")
 
-    date = datetime.fromtimestamp(timestamp).strftime('%Y-%m-%d %H:%M:%S')
-    info_project = {"project_name": project_name, "timestamp": timestamp, "dump": date}
-    return Response(json.dumps(info_project), status=202, mimetype="application/json")
+    return Response(json.dumps(content), status=202, mimetype="application/json")
 
 
 def delete_project(project_name):
@@ -136,6 +131,22 @@ def project_status_all(project_name):
         dumps_status[date] = content
 
     return Response(json.dumps(dumps_status, sort_keys=False), status=200, mimetype="application/json")
+
+
+def label(project_name):
+    sq_local = SonarqubeLocalProject(project_name)
+    if not sq_local.exist():
+        return Response(json.dumps({"error": "Project not found"}), status=404, mimetype="application/json")
+
+    label_csv = request.files["label_csv"]
+
+    try:
+        status, content = projects.add_label(project_name, label_csv)
+    except Exception as e:
+        error_content = {"error": "Internal server error", "msg": str(e), "traceback": traceback.format_exc()}
+        return Response(json.dumps(error_content), status=500, mimetype="application/json")
+
+    return Response(json.dumps(content), status=status, mimetype="application/json")
 
 
 def project_status(project_name, timestamp):
@@ -239,15 +250,3 @@ def projects_info():
         info_projects[project_name] = content
 
     return Response(json.dumps(info_projects), status=200, mimetype="application/json")
-
-
-# Known projects
-def get_known_projects():
-    path = KnownDataset.root_path()
-
-    if os.path.exists(path) and os.path.isdir(path):
-        dirs = utils.getdirs(path)
-        return Response(json.dumps(dirs), status=200, mimetype="application/json")
-
-    msg = "Internal access error. Impossible retrieve information about the known datasets stored"
-    return Response(json.dumps({"error": msg}), status=200, mimetype="application/json")
